# stt-python

./: .gitignore  PyVoDictation.spec  README.md  main.py  pyproject.toml  requirements.txt  test_gemini.py
.claude/: CLAUDE.md
.serena/: project.yml
app/: config.py  engine.py  gemini.py  google_speech.py  settings.py  whisper.py  word_replacement.py
config/: prompts.json  settings.json  settings.py
core/: audio.py  engine.py  keyboard.py  text_input.py
model/: gemini.py  whisper.py
test/: test_applescript.py  test_cg_input.py  test_direct_type.py  test_gemini.py  test_key.py  test_keyboard.py  test_paste.py  test_paste_v2.py  test_simple.py  test_text_input.py
ui/: __init__.py  feedback.py  menu_bar.py  settings_window.py
